50-apps/bambustudio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bambustudio
  namespace: apps
  labels:
    app: bambustudio
spec:
  selector:
    app: bambustudio
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: https
      port: 443
      targetPort: 3001
