50-apps/bambustudio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bambustudio
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: apps-authelia@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: apps-bambustudio-insecure@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bambu.neleoz.com
      secretName: bambustudio-tls
  rules:
    - host: bambu.neleoz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bambustudio
                port:
                  number: 443
